# gap-osx-binary

include/: cxscconf.h  gmp.h
include/4ti2/: 4ti2_config.h
include/NTL/: config.h
include/factory/: cplusplus.h  factory.h  factoryconf.h
include/fplll/: dpe.h
include/omalloc/: omConfig.h  omTables.h
include/pari/: paricfg.h
include/resources/: resourcesconfig.h
include/singular/: libpolysconfig.h  singularconfig.h
lib/: libSingular-4.0.1.dylib  libSingular-4.0.2.dylib  libSingular.dylib  libboost_atomic.dylib  libcxsc.2.dylib  libcxsc.dylib  libfactory-4.0.1.dylib  libfactory-4.0.2.dylib  libfactory.dylib  libflint-13.5.2.dylib  libflint.dylib  libfplll.0.dylib  libfplll.dylib  libglpk.36.dylib  libgmp.10.dylib  libgmpxx.4.dylib  libhistory.6.3.dylib  libmpc.3.dylib  libmpfi.0.dylib  libmpfi.dylib  libmpfr.4.dylib  libnormaliz.0.dylib  libnormaliz.2.12.1.dylib  libnormaliz.3.0.0.dylib  libnormaliz.dylib  libntl.5.dylib  libntl.dylib  libomalloc-0.9.6.dylib  libomalloc.dylib  libpari.dylib  libpolys-4.0.1.dylib  libpolys-4.0.2.dylib  libpolys.dylib  libreadline.6.3.dylib  libresources-4.0.1.dylib  libresources-4.0.2.dylib  libresources.dylib
lib/gap/: CITATION  gap.shi  sysinfo.gap  sysinfo.gap-default64
lib/gap/cnf/: configure.in  configure.out  gac.in  sysinfo.in
lib/gap/doc/: manualbib.xml.bib  versiondata
lib/gap/doc/changes/: chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  (+9 more)
lib/gap/lib/: system.g
lib/gap/pkg/: README.aclib  README.automata  README.cohomolo  README.congruence  README.format  README.fwtree  README.gpd  README.happrime  README.hecke  README.intpic  README.kan  README.loops  README.nilmat  README.pargap  README.rcwa  README.resclasses  README.sgpviz  README.sophus  README.toric  README.unitlib  README.xmod
lib/gap/pkg/linboxing/: CHANGES  Makefile.am  Makefile.in  PackageInfo.g  README  TODO  aclocal.m4  configure  configure.ac  init.g  read.g  test.g
lib/gap/pkg/linboxing/doc/: chap0.html  chap0.txt  chap1.html  chap1.txt  chap2.html  chap2.txt  chap3.html  chap3.txt  chap4.html  chap4.txt  chap5.html  chap5.txt  chapInd.html  chapInd.txt  functions.xml.in  implementation.xml  includesourcedoc.sh  install.xml  internal.xml.in  internal.xml.none  intro.xml  linboxing.xml  manual.css  manual.six
lib/gap/pkg/linboxing/lib/: linboxing.gd  linboxing.gi  solutions.gi  tests.gi
lib/gap/pkg/linboxing/m4/: ac_check_linbox_shared.m4  ac_check_linbox_version_at_least.m4  ac_find_gap.m4  ac_find_gmp.m4  ac_find_linbox.m4  blas-check.m4  config-blas.h  givaro-check.m4
lib/gap/pkg/linboxing/src/: Doxyfile  Makefile.am  Makefile.in  config-linboxing.h.in  convert.h  linboxfuncs.cc  linboxing.c  linboxing.h  runfunc.h
lib/gap/pkg/linboxing/tst/: linboxing.tst
lib/gap/pkg/pargap/: CONTENTS  Makefile.in  PackageInfo.g  configure  configure.ac  init.g  read.g
lib/gap/pkg/pargap/doc/: make_doc  manual.aux  manual.bbl  manual.bib  manual.blg  manual.dvi  manual.example-1.tst  manual.example-3.tst  manual.example-4.tst  manual.example-5.tst  manual.idx  manual.ilg  manual.ind  manual.lab  manual.ps  manual.six  manual.tex  manual.toc  pargap1.tex  pargap2.tex  pargap3.tex  pargap4.tex  pargap5.tex  pargap6.tex  pargap7.tex  tutorial.tex
lib/gap/pkg/pargap/etc/: TODO-1.3.0
lib/gap/pkg/pargap/examples/: pargapdemo.g
lib/gap/pkg/pargap/htm/: CHAP001.htm  CHAP002.htm  CHAP003.htm  CHAP004.htm  CHAP005.htm  CHAP006.htm  CHAP007.htm  CHAP008.htm  biblio.htm  chapters.htm  indxA.htm  indxB.htm  indxC.htm  indxD.htm  indxE.htm  indxF.htm  indxG.htm  indxI.htm  indxM.htm  indxN.htm  indxO.htm  indxP.htm  indxR.htm  indxS.htm  indxT.htm  indxU.htm  indxW.htm  theindex.htm
lib/gap/pkg/pargap/lib/: masslave.g  slavelist.g
lib/gap/pkg/pargap/mpinu/: sendrecv.c
lib/gap/pkg/pargap/mpinu2/: mpi.c  send-nonblock.c  utils.c
lib/gap/pkg/pargap/src/: gapmpi.c
lib/gap/pkg/pargap/tst/: pargap.tst
lib/gap/src/: system.c
libexec/singular/MOD/: LLL  change_cost  gen_test  solve_IP  toric_ideal
pkgs/: 4ti2  automake  boost  cmake  cxsc  flint  fplll  gap  glpk  gmp  libtool  mpc  mpfi  mpfr  normaliz  pari  readline  singular
pkgs/gap-pkgs/: Browse  Gauss  ace  anupq  cohomolo  cvec  edim  example  float  fplsa  grape  guava  io  kbmag  nq  orb
share/applications/: Singular-manual.desktop  Singular.desktop
share/cxsc/examples/: allzeros  cpz_ex  ddf_ex  example  fastlss_ex  gop1_ex  gop_ex  hess_ex  inewton  io  jac_ex  lexample  linewton  lop_ex  lss_ex  nlfz_ex  nlss_ex  rpe_ex  rungekutta  trace  xev_ex1  xev_ex2  xev_ex3
share/info/: dir
share/man/man1/: gp.1  pari.1
share/pari/doc/: paricfg.tex
share/pari/examples/: Makefile
share/singular/LIB/: JMBTest.lib  JMSConst.lib  KVequiv.lib  absfact.lib  ainvar.lib  aksaka.lib  alexpoly.lib  algebra.lib  algemodstd.lib  all.lib  arcpoint.lib  arr.lib  assprimeszerodim.lib  bfun.lib  bimodules.lib  binresol.lib  brillnoether.lib  brnoeth.lib  central.lib  cimonom.lib  cisimplicial.lib  classify.lib  classify_aeq.lib  classifyceq.lib  classifyci.lib  compregb.lib  control.lib  crypto.lib  curvepar.lib  decodegb.lib  decomp.lib  deform.lib  divisors.lib  dmod.lib  dmodapp.lib  dmodloc.lib  dmodvar.lib  ehv.lib  elim.lib  equising.lib  (+112 more)
share/singular/doc/: singular.idx
share/singular/html/: index.htm  sing_1.htm  sing_10.htm  sing_100.htm  sing_1000.htm  sing_1001.htm  sing_1002.htm  sing_1003.htm  sing_1004.htm  sing_1005.htm  sing_1006.htm  sing_1007.htm  sing_1008.htm  sing_1009.htm  sing_101.htm  sing_1010.htm  sing_1011.htm  sing_1012.htm  sing_1013.htm  sing_1014.htm  sing_1015.htm  sing_1016.htm  sing_1017.htm  sing_1018.htm  sing_1019.htm  sing_102.htm  sing_1020.htm  sing_1021.htm  sing_1022.htm  sing_1023.htm  sing_1024.htm  sing_1025.htm  sing_1026.htm  sing_1027.htm  sing_1028.htm  sing_1029.htm  sing_103.htm  sing_1030.htm  sing_1031.htm  sing_1032.htm  (+2317 more)
(+4464 files in other folders)
